# ttdemo

./: .gitignore  README.md  WP3657.gpml  app.py  flake.nix  pyproject.toml  requirements.txt  scratch.py
cache/notebooks/pfas_analysis/: all_predictions.parquet  chemicals.txt  feature_importance.csv  hepato-features.txt  parsed_chemicals.csv  predictions.parquet
cache/projects/: property_names.txt
cache/projects/cosmetics/: chemicals.txt  classified_chemicals.csv  log.txt  (+5 more)
cache/resources/: README.md  chemicals.txt  colormap.yaml  gemini-interesting-chemicals  gemini-interesting-properties.txt  gemini-properties.txt
hepatotoxicity/: find_relevant_properties.py  predicted_property_names.txt
notebooks/: pfas_analysis.py
src/ttdemo/: 03_predict_chemicals.py  05_build_stripchart.py  06_build_sample_analysis.py  build_heatmap.py  build_stripchart.py  parse_chemicals.py  predict_chemicals.py  predict_entity_properties_from_pathway.py  predict_gene_properties_from_pathway.py
toxindex/: 02_categorize_chemicals.py  03_predict_chemicals.py  04_build_heatmap.py  build_heatmap.py  build_stripchart.py  categorize_chemicals.py  feature_selection.py  parse_chemicals.py  predict_chemicals.py  predict_entity_properties_from_pathway.py  predict_gene_properties_from_pathway.py  select_feature.py
toxindex/pathway_visualization/: Dockerfile  annotate_pathway.py  annotate_wikipathway.py  annotate_wikipathway2.py  annotate_wikipathway3.py  annotate_wikipathway4.py  annotate_wikipathway5.py  install_cytoscape.py
toxindex/utils/: chemprop.py  csv2txt.py  helper.py
(+115 files in other folders)
